[package]
name = "httprom"
version = "0.1.0"
authors = ["Josh Chorlton <jchorlton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
http = "0.2"
prometheus = { version = "0.8", features = ["push"] }
reqwest = "0.10"
tokio = { version = "0.2", features = ["full"] }
